feat : refactor , finally remove all java proejcts