@@ -1,34 +1,13 @@
-ext {
-    logbackVersion = "1.4.4"
-    slf4jVersion = "2.0.3"
-    resilience4jVersion = "2.0.0"
-}
-
-test {
-    useJUnitPlatform()
-    systemProperty("java.awt.headless", "true")
-    systemProperty("testGroups", project.properties.get("testGroups"))
-    systemProperty("io.netty.leakDetection.level", "paranoid")
-    systemProperty("io.netty5.leakDetectionLevel", "paranoid")
-    systemProperty("io.netty5.leakDetection.targetRecords", "32")
-    systemProperty("io.netty5.buffer.lifecycleTracingEnabled", "true")
-    systemProperty("io.netty5.buffer.leakDetectionEnabled", "true")
-    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED",
-             "--add-opens=java.base/java.util=ALL-UNNAMED"])
-}
-
 dependencies {
 
     implementation("com.google.guava:guava:31.1-jre")
-    implementation("com.github.ben-manes.caffeine:caffeine:3.1.1")
+    implementation("com.github.ben-manes.caffeine:caffeine:")
 
 
-    testImplementation "ch.qos.logback:logback-classic:${logbackVersion}"
-    testImplementation "ch.qos.logback:logback-core:${logbackVersion}"
-    testImplementation "org.slf4j:slf4j-api:${slf4jVersion}"
-
-    testImplementation("io.github.resilience4j:resilience4j-circuitbreaker:${resilience4jVersion}")
-
-    testImplementation("org.junit.jupiter:junit-jupiter:5.8.2")
-    testImplementation("org.assertj:assertj-core:3.22.0")
+    testImplementation "ch.qos.logback:logback-classic:"
+    testImplementation "ch.qos.logback:logback-core:"
+    testImplementation "org.slf4j:slf4j-api:"
+    testImplementation("io.github.resilience4j:resilience4j-circuitbreaker:")
+    testImplementation("org.junit.jupiter:junit-jupiter:")
+    testImplementation("org.assertj:assertj-core:")
 }
